@@ -6,6 +6,7 @@ readsb (4.0.2~dev) UNRELEASED; urgency=medium
     * Change preamble detection to a modified approach
     * Add configurable preample threshold.
     * Fake clock when using ifile.
+    * Output statistics phase statistics.
 
  -- Michael Wolf <michael@mictronics.de>  Mon, 14 Dec 2020 12:01:33 +0100
 
